--- a/projects/app/index.html
+++ b/projects/app/index.html
@@ -14,7 +14,7 @@
     }" />`,
       )
     </script>
-    <title>picme</title>
+    <title>%VITE_APP_TITLE%</title>
     <!--preload-links-->
     <!--app-context-->
   </head>
