--- a/projects/admin/index.html
+++ b/projects/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>%VITE_APP_NAME% —— 管理后台</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="/logo.svg">
   </head>
 
   <body>
